--- a/css/swipebox.css
+++ b/css/swipebox.css
@@ -151,7 +151,7 @@ html.swipebox-html.swipebox-touch {
 }
 
 #swipebox-next {
-  background-position: -78px 13px;
+  background-position: -78px 13px!important;
   float: right;
 }
 
